--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,20 @@ hs_err_pid*
 *.iml
 out
 gen
+classes
+target
+META-INF
+.kotlin_module
+.puml
+*.idea!/.idea/compiler.xml
+!/.idea/compiler.xml
+
+!/.idea/jarRepositories.xml
+
+!/.idea/encodings.xml
+
+!/.idea/misc.xml
+
+!/.idea/vcs.xml
+
+!/.idea/workspace.xml
